------------------------------------------------------------------------
r2709 | gaser | 2025-05-23 15:51:40

Changed paths:
 M CHANGES.txt
 M cat_conf_factorial.m
 M cat_plot_histogram.m
 M cat_surf_resamp.m

Fixed: Call spm_run_factorial_design twice to ensure that design matrix is 
       correctly displayed in cat_conf_factorial.m
Fixed: Added missing argument in cat_plot_histogram for displaying T-maps.
Fixed: Added error message if smoothed file is not found in cat_surf_resamp.m
 ------------------------------------------------------------------------
r2701 | dahnke | 2025-04-23 18:45:28

Changed paths:
 M CHANGES.txt
 M cat_conf_extopts.m
 M cat_io_data2mat.m
 M cat_surf_createCS.m
 M cat_surf_createCS2.m
 M cat_surf_createCS4.m
 M cat_surf_fun.m
 M cat_vol_pbtsimple.m

Updated:  Added further surface pipelines to configure cat_pbt_simple 
          and cat_surf_createCS# in expert GUI (cat_conf_extopts). 
Updated:  Added new functionality in cat_pbt_simple: 
           (1) additional blood vessel correction (working)
           (2) myelin correction (experimental, SRP: 24,41)) 
           (3) extended position map (experimental)
           (4) presharpening (experimental, SRP: 24,41)
           (5) remove outliers (experimental, SRP: 24,41))
Updated:  Added cat_pbt_simple setup in cat_surf_createCS[24]. 
Updated:  Modified settings of the self-intersection correction and
          surface optimization in cat_surf_fun:
Updated:  Modified test of flipped surface normals in cat_surf_fun:
          cat_sur_checkNormalDir that would need final cleanup. 
  ------------------------------------------------------------------------
r2699 | gaser | 2025-04-23 15:48:10

Changed paths:
 M CHANGES.txt
 M Makefile
 M cat_update.m
 M doc/cat.txt

Updated: New update procedure to get releases from Github.
------------------------------------------------------------------------
r2693 | gaser | 2025-04-23 14:37:09

Changed paths:
 M CHANGES.txt
 M cat_main_amap.m